# ----------------------------------------------------------------------------
#
# Podz: A Pod Racing Game
# Copyright (C) 2006 Benjamin Gaillard & Nicolas Riegel
#
# ----------------------------------------------------------------------------
#
#        File: data/Makefile.am
# Description: Data Files Automake Makefile
#
# ----------------------------------------------------------------------------
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation; either version 2 of the License, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
# for more details.
#
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc., 59
# Temple Place - Suite 330, Boston, MA 02111-1307, USA.
#
# ----------------------------------------------------------------------------


# Directories
leveldir    = $(pkgdatadir)-$(PACKAGE_VERSION)
texturesdir = $(leveldir)/textures

# Data files
dist_level_DATA = \
    level.txt
dist_textures_DATA = \
    textures/back.bmp \
    textures/bg-back.bmp \
    textures/bg-bottom.bmp \
    textures/bg-front.bmp \
    textures/bg-left.bmp \
    textures/bg-right.bmp \
    textures/bg-top.bmp \
    textures/border.bmp \
    textures/circuit.bmp \
    textures/cockpit.bmp \
    textures/gray.bmp \
    textures/gray-red.bmp \
    textures/grid.bmp \
    textures/top-left.bmp \
    textures/top-right.bmp

# End of File
