# ----------------------------------------------------------------------------
#
# Podz: A Pod Racing Game
# Copyright (C) 2006 Benjamin Gaillard & Nicolas Riegel
#
# ----------------------------------------------------------------------------
#
#        File: doc/Makefile.am
# Description: Documentation Automake Makefile
#
# ----------------------------------------------------------------------------
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation; either version 2 of the License, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
# for more details.
#
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc., 59
# Temple Place - Suite 330, Boston, MA 02111-1307, USA.
#
# ----------------------------------------------------------------------------


# Directories
docsdir = $(datadir)/doc/$(PACKAGE_TARNAME)-$(PACKAGE_VERSION)

# Data files
dist_docs_DATA = \
    subject-fr.pdf \
    report-fr/rapport.pdf

# Extra files
EXTRA_DIST = \
    report-fr/Makefile \
    report-fr/bglstyle.sty \
    report-fr/images/ulp.eps \
    report-fr/images/ulp.pdf \
    report-fr/rapport.pdf \
    report-fr/rapport.tex \
    report-fr/schemas/basis.eps \
    report-fr/schemas/basis.odg \
    report-fr/schemas/basis.pdf

# End of File
